hphp/hack/test/typecheck/denotable_unions/dunion_bad_syntax.php.exp
File "dunion_bad_syntax.php", line 4, characters 26-26:
Expected matching separator here. (Parsing[1002])
